--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- App Title -->
+    <title>Real You Shield</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Real You Shield – Protecting your digital identity and privacy with AI-powered insights." />
+    <meta name="author" content="Real You Shield Team" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Real You Shield" />
+    <meta property="og:description" content="AI-powered privacy and identity protection for the real you." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@RealYouShield" />
+    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
   </head>
 
   <body>
