Update index.html for portfolio metadata and favicon

--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Khushi Khullar — Developer & Data Scientist</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.png" />
-
-    <!-- App Title -->
-    <title>VoiceGuard — AI Voice Fraud Prevention for Financial Institutions</title>
-
-    <!-- SEO -->
-    <meta name="description" content="VoiceGuard detects AI voice clones during live calls. On-device, private, under 200ms. Built for financial institutions." />
-    <meta name="author" content="VoiceGuard" />
+    <meta name="description" content="Portfolio of Khushi Khullar — Full-Stack Developer, Data Scientist, and Cloud Architect." />
+    <meta name="author" content="Khushi Khullar" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="VoiceGuard — Stop Voice Fraud" />
-    <meta property="og:description" content="AI voice clone detection for financial institutions. On-device. Private. Instant." />
+    <meta property="og:title" content="Khushi Khullar — Portfolio" />
+    <meta property="og:description" content="Full-Stack Developer, Data Scientist, and Cloud Architect." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
+    <meta property="og:image" content="/portfolio-preview.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@RealYouShield" />
-    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
+    <meta name="twitter:site" content="@KhushiKhullar" />
+    <meta name="twitter:title" content="Khushi Khullar — Portfolio" />
+    <meta name="twitter:description" content="Full-Stack Developer, Data Scientist, and Cloud Architect." />
+    <meta name="twitter:image" content="/portfolio-preview.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
 
   <body>
@@ -31,3 +30,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
