--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Khushi Khullar — Developer & Data Scientist</title>
-
-    <meta name="description" content="Portfolio of Khushi Khullar — Full-Stack Developer, Data Scientist, and Cloud Architect." />
-    <meta name="author" content="Khushi Khullar" />
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="Khushi Khullar — Portfolio" />
-    <meta property="og:description" content="Full-Stack Developer, Data Scientist, and Cloud Architect." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/portfolio-preview.png" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@KhushiKhullar" />
-    <meta name="twitter:title" content="Khushi Khullar — Portfolio" />
-    <meta name="twitter:description" content="Full-Stack Developer, Data Scientist, and Cloud Architect." />
-    <meta name="twitter:image" content="/portfolio-preview.png" />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- App Title -->
+    <title>Real You Shield</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Real You Shield – Protecting your digital identity and privacy with AI-powered insights." />
+    <meta name="author" content="Real You Shield Team" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Real You Shield" />
+    <meta property="og:description" content="AI-powered privacy and identity protection for the real you." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@RealYouShield" />
+    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
   </head>
 
   <body>
@@ -30,4 +31,3 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
